resolved alignment issues, re-centered carousel

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,10 @@
 #sectionContent {
   height: 100vh;
   background-color: #4CACBC;
+  display:flex;
+  flex-direction: column;
+  align-content: center;
+  /* border: solid red; */
 }
 
 #contactContent {
@@ -84,7 +88,8 @@
   font-size: 10vh;
   line-height: 110px;
   margin-left: 200px;
-  margin-top: 150px;
+  margin-top: 50px;
+  margin-bottom: 30px;
   max-width: 35%;
   /* position: relative; */
   text-align: left;
@@ -135,21 +140,23 @@
 } */
 
 .custom-slider {
-  width: 100%;
+  width: 80%;
   height: 400px;
   border-radius: 100px 100px 20px 20px;
   /* display: flex; */
   background-color: #4FBDBA;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  padding-bottom: 30px;
 }
+
 .custom-slider h1 {
   color: #072227;
 }
 
 #caroDiv {
-  display: flex;
-  justify-content: center;
-  align-self: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-self: center; */
   /* border: solid red; */
 }
 
